2023-01-31  Bart Schaefer  <schaefer@zsh.org>

	* 51342: Etc/zsh-development-guide: update PARAMDEF description

	* 51337: Doc/Zsh/expn.yo, Doc/Zsh/mod_parameter.yo: parameter
	attributes cross-reference typeset equivalents (or lack thereof)

2023-01-27  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (cribbed from users/28784 by Roman):
	Test/D04parameter.ztst: Add XFail tests for substituting a
	single-quoting backslash.

2023-01-27  Shohei YOSHIDA  <syohex@gmail.com>

	* 51330: Completion/Unix/Command/_python: Update python3
	completion for version 3.11

2023-01-24  Shohei YOSHIDA  <syohex@gmail.com>

	* 51326: Completion/Unix/Command/_gcc: Improve -fsanitize
	option completion

2023-01-22  Shohei YOSHIDA  <syohex@gmail.com>

	* 51322 (+ minor tweak): Completion/Unix/Command/_make: Update gnu
	make completion for version 4.4

2023-01-21  Bart Schaefer  <schaefer@zsh.org>

	* 51313: Completion/Unix/Command/_git: fix "git rerere forget"

	* 51310: Src/Zle/zle_main.c: zle -F handlers preserve LASTWIDGET

2023-01-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 51278: Src/params.c, Test/D06subscript.ztst: result of (i)
	subscript flag with zero-length string was inconsistent with
	other cases.

2023-01-11  Oliver Kiddle  <opk@zsh.org>

	* 51297: Test/X04zlehighlight.ztst: update expected test results
	to match more optimised escape sequences with recent changes

	* Jörg Sommer: 51256: Completion/Unix/Command/_git:
	Add --refetch to completions of git-fetch

	* unposted: NEWS, Src/zsh.h, Completion/Zsh/Type/_ps1234: mention
	attributes changes, fix renumbering mistake and allow completion
	to offer prompt escapes for PROMPT_EOL_MARK

	* 51295: Src/Zle/zle_utils.c: where the end of a region coincides
	with the end of PREDISPLAY, don't extend it to include new text

2023-01-10  Oliver Kiddle  <opk@zsh.org>

	* 51292: Src/Zle/zle_utils.c: fix dynamic updates of
	region_highlight to account for PREDISPLAY
