@@ -1,3 +1,9 @@
+2023-02-02  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 51307: Src/input.c, Src/parse.c, Test/A02alias.ztst: error
+	on attempt to expand alias in function definition name didn't
+	find the original alias and printed an extra error.
+
 2023-01-31  Bart Schaefer  <schaefer@zsh.org>
 
 	* 51342: Etc/zsh-development-guide: update PARAMDEF description
